--- a/ITEMS/additem.html
+++ b/ITEMS/additem.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document PAPA IS A GOOD</title>
+    <title>Document PAPA IS A GOOD
+      Pavani Pitch Akuva Kada</title>
 </head>
 <body>
     add items
